--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_proiect.scss
@@ -72,6 +72,10 @@ article.type-proiect .intro .intro-footer {
   color: #cff;
 }
 
+article.type-proiect .intro .intro-footer .social {
+  text-align: center;
+}
+
 article.type-proiect .intro .intro-footer .eticheta {
   font-weight: light;
   margin-right: 20px;
